--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "jquery": "^3.6.0",
+    "notistack": "^2.0.3",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^5.2.0",
