--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "node-fetch": "^2.6.7",
     "pg": "^8.7.1"
   },
   "devDependencies": {
