--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mapbox": "^1.0.0-beta10",
     "node-fetch": "^2.6.7",
     "pg": "^8.7.1"
   },
