--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^2.8.0",
     "node-fetch": "^2.6.7",
     "pg": "^8.7.1"
   },
