--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-select-search": "^3.0.9",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
